# OpenGL-Project

./: CMakeLists.txt  a.out  glad.c  main  main.cpp  readme.md  scratch.frag  shader.vert
include/: glad.h  glfw3.h  glfw3native.h
main.dSYM/Contents/Resources/DWARF/: main
